Changelog
=========

0.1.5 (unreleased)
------------------

- Allow mapwidget to utilise HTTPS mapping resources, where possible, to 
  attempt to avoid issues of loading insecure resources like map tiles. Only
  Google and Bing support HTTPS for their APIs at present - Yahoo and OSM do
  not. To avoid security errors, avoid the use of the latter two map APIs 
  when on HTTPS.
  [davidjb]
- Provide request protocol to layer templates
  [davidjb]
- Make tests install the collective.geo.settings extension profile so
  plone.app.registry knows about settings.
  [davidjb]


0.1.4 (2011-09-05)
------------------
- Changed javascript to bind window load event to create map. It fixes #29 [gborelli]
- Added fix to reload OL map layers when the map is made visible after
  being loaded within a non-default Plone fieldset [davidjb]
- added improvements about the Internationalization [macagua]
- added support for Spanish localization for collective.geo.mapwidget domain [macagua]
- Make our mapwidget automatically zoom to see a loaded WKT feature. [davidjb]
- Show our default fieldset first on our form in accordance with changes in 
  plone.app.z3cform 0.5.0+. [davidjb]
- Added ability to display custom-styled maps with inline CSS.  This is based
  around width/height initially for either global or local custom settings
  but is extensible by mapping more fields. [davidjb]
- added map_viewlet_managers in control panel form [gborelli]
- plone 4.1 fixes [gborelli]
- changed Browser import from Testing.testbrowser [gborelli]
- removed zope.app.component import [gborelli]
- changed map widgets jsfactory to provide a simple way to customize it [gborelli]
- added z3c.autoinclude entry point [gborelli]
- fixed layers query in maplayers
- Added ability to drag features drawn onto OL map when editing [davidjb]
- Minor spelling corrections [davidjb]


0.1.3 (2011-02-20)
------------------

- changed Google maps javascript url


0.1.2 (2010-12-28)
------------------
